# FinanceGPT

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  ui.py
.dvc/: config
.github/actions/shared-init/: action.yml
.github/workflows/: CI.yml  pylint.yml
examples/: .gitignore  get_us100.py  reformat_news.py
examples/templates/: templates.yaml
financegpt/: app.py
financegpt/data/: data_adapter.py  data_connector.py  data_point.py  dataset.py  utils.py
financegpt/llm/: chain.py  utils.py
financegpt/prompting/: prompt.py
financegpt/template/: data_container.py  templates.py
scripts/: example_data.dvc  ray_data_load.ipynb
setup/: mongo.py  populate_database.py
setup/db_fixtures/: default_prompt_templates.yaml
setup/mongo_schemas/: data_points.json  inference_results.json  models.json  submitted_prompts.json  users.json
tests/: conftest.py  test_import.py
tests/integration/: conftest.py  test_app.py  test_data_connector.py  test_db_data_validation.py  test_inference.py  test_store_prompt_templates.py
tests/test_data/: templates.yaml
tests/unit/: test_app.py  test_container.py  test_container_collection.py  test_container_factory.py  test_data_adapters.py  test_data_point.py  test_database_connectors.py  test_dataset.py  test_llm_chain.py  test_prompt.py  test_prompt_collection.py  test_prompt_factory.py  test_template.py
