[build-system]
requires = ["setuptools"]

[project]
name = "FinanceGPT"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "dvc==3.14.0",
    "dvc-s3==2.23.0",
    "pymongo==4.4.1",
    "pydantic==2.2.0",
    "pandas-datareader==0.10.0"
]

[project.optional-dependencies]
test = [
    "black==23.7.0",
    "pytest==7.4.0",
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",
    "mypy==1.4.1",
    "python_dotenv==1.0.0",
    "pytest-dotenv==0.5.2"
]


[tool.setuptools.dynamic]
version = {attr = "financegpt.__version__"}

[tool.setuptools.packages.find]
include = ["financegpt*"]

[tool.flake8]
ignore = ['E203']
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true